--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,10 @@ JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
+# API Key for Cronjobs/Integrations
+# Generate a strong random key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+CRONJOB_API_KEY=your-cronjob-api-key-here-change-in-production
+
 # S3/MinIO Settings (optional)
 S3_ENDPOINT_URL=http://localhost:9000
 S3_ACCESS_KEY_ID=minioadmin
